--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <br>
         <br>
-        <img src="./ronaldo_drinking_meme-f-R9lGvSLI4.mp4">
+	    <video src="./ronaldo_drinking_meme-f-R9lGvSLI4.mp4"></video>
 
     </tbody>
 </html>
