--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <br>
         <br>
         <br>
-	    <video src="./ronaldo_drinking_meme-f-R9lGvSLI4.mp4"></video>
+	    <video width="320" height="240" controls>
+		<source src="./ronaldo_drinking_meme-f-R9lGvSLI4.mp4" type="video/mp4">
+	    </video>
 
     </tbody>
 </html>
