--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
+		<meta charset="UTF-8">
 		<title> Vidéos Downloader</title>
 		<link rel="stylesheet" type="text/css" media="all" href="./css.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
